# csci-courses

./: .gitignore  Cargo.toml  build.rs  csci-courses-dev.nix  package.json  tailwind.config.js
assets/: csci-courses.css
example/: .gitignore  Dockerfile  build.sh  example_assignment.cpp  example_assignment.json
htmx/: 404.html  index.html
htmx/components/: footer.js  navbar.js
src/: api.rs  compile.rs  compiler.rs  container.rs  lib.rs  main.rs
style/: tailwind.css
