[package]
name = "csci-courses"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
# serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["process", "rt-multi-thread"] }
tower = { version = "0.5.1", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["compression-gzip", "cors", "fs"] }
uuid = { version = "1.11.0", features = ["v4"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
