[package]
name = "csci-courses"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["std"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["process", "rt-multi-thread"] }
tower = { version = "0.5.1", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["compression-gzip", "cors", "fs", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
